--- a/xrefmap.yml
+++ b/xrefmap.yml
@@ -5410,12 +5410,12 @@ references:
   isSpec: "True"
   fullName: MacroTools.Cheats.TestMode.CheatDocumentation.Setup
   nameWithType: TestMode.CheatDocumentation.Setup
-- uid: MacroTools.Cheats.TestMode.Setup
-  name: Setup()
-  href: api-macroTools/MacroTools.Cheats.TestMode.html#MacroTools_Cheats_TestMode_Setup
-  commentId: M:MacroTools.Cheats.TestMode.Setup
-  fullName: MacroTools.Cheats.TestMode.Setup()
-  nameWithType: TestMode.Setup()
+- uid: MacroTools.Cheats.TestMode.Setup(MacroTools.CommandSystem.CommandManager)
+  name: Setup(CommandManager)
+  href: api-macroTools/MacroTools.Cheats.TestMode.html#MacroTools_Cheats_TestMode_Setup_MacroTools_CommandSystem_CommandManager_
+  commentId: M:MacroTools.Cheats.TestMode.Setup(MacroTools.CommandSystem.CommandManager)
+  fullName: MacroTools.Cheats.TestMode.Setup(MacroTools.CommandSystem.CommandManager)
+  nameWithType: TestMode.Setup(CommandManager)
 - uid: MacroTools.Cheats.TestMode.Setup*
   name: Setup
   href: api-macroTools/MacroTools.Cheats.TestMode.html#MacroTools_Cheats_TestMode_Setup_
